# AgentShield

./: .dockerignore  .env.example  .gitignore  .yamllint.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  scan.yml
agentshield/: __init__.py  __main__.py  cli.py  config.py  constants.py
agentshield/benchmarks/: loader.py  runner.py
agentshield/detect/: __init__.py  semantic.py
agentshield/dynamic/: attack_generator.py  llm_judge.py  report.py  runtime_simulator.py
agentshield/eval/: __init__.py  scorer.py
agentshield/metrics/: aggregator.py  report_writer.py  rule_registry.py
agentshield/models/: benchmark.py  dynamic.py  finding.py  mcp_surface.py  metrics.py  scan.py  target.py
benchmarks/: README.md
docs/: DEPLOY.md  FEATURE_PRIORITIZATION.md  IMMEDIATE_BUILD_PLAN.md  IMPLEMENTATION_STATUS.md  METRICS_AND_OUTCOMES.md  ONBOARDING_FOR_AI_AGENTS.md  PRODUCT.md  PROJECT_METRICS.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  ROADMAP.md  TECH_STACK.md  TECH_STACK_UPGRADE_ANALYSIS.md  architecture.md  benchmark-plan.md  ci-usage.md  demo-script.md  metrics.md  threat-model.md
scripts/: generate_metrics_report.py  validate_llm_judge.py
tests/: test_benchmark_loader.py  test_benchmark_runner.py  test_discovery.py  test_dynamic.py  test_eval.py  test_exit_codes.py  test_mcp_parser.py  test_metrics.py  test_reporting.py  test_rules.py  test_semantic.py  test_web_api.py
web/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
(+138 files in other folders)
